# mcp-devps-hub

./: .env.example  .gitignore  adhikasp-mcp-linkedin.txt  modelcontextprotocol-python-sdk.txt  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: demo_clients.py  mcp_client_demo.py  run_demo.bat  run_demo.sh  run_demo_windows.ps1  setup-dev.bat  setup-dev.sh  test.bat  test.sh
src/mcp_devops_hub/: __init__.py  config.py  server.py
src/mcp_devops_hub/clients/: __init__.py  github_client.py  groq_client.py  jenkins_client.py  jira_client.py
src/mcp_devops_hub/utilities/: __init__.py  constants.py  logging.py
tests/: test_github_client.py  test_groq_client.py
